isMainThread() on Chromium (Mac and Linux) is so slow it timeouts LayoutTests.. https://bugs.webkit.org/show_bug.cgi?id=31693

Reviewed by David Levin.

* wtf/ThreadingPthreads.cpp:
(WTF::initializeThreading): grab and use the pthread_t of the main thread instead of ThreadIdentifier.
(WTF::isMainThread): Ditto.

git-svn-id: svn://svn.chromium.org/blink/trunk@51211 bbb929c8-8fbe-4397-9dbb-9b2b20218538