third_party/WebKit/JavaScriptCore/wtf/ThreadingPthreads.cpp
@@ -57,7 +57,7 @@ typedef HashMap<ThreadIdentifier, pthread_t> ThreadMap;
 static Mutex* atomicallyInitializedStaticMutex;
 
 #if !PLATFORM(DARWIN) || PLATFORM(CHROMIUM)
-static ThreadIdentifier mainThreadIdentifier; // The thread that was the first to call initializeThreading(), which must be the main thread.
+static pthread_t mainThread; // The thread that was the first to call initializeThreading(), which must be the main thread.
 #endif
 
 static Mutex& threadMapMutex()
@@ -73,7 +73,7 @@ void initializeThreading()
         threadMapMutex();
         initializeRandomNumberGenerator();
 #if !PLATFORM(DARWIN) || PLATFORM(CHROMIUM)
-        mainThreadIdentifier = currentThread();
+        mainThread = pthread_self();
 #endif
         initializeMainThread();
     }
@@ -233,7 +233,7 @@ bool isMainThread()
 #if PLATFORM(DARWIN) && !PLATFORM(CHROMIUM)
     return pthread_main_np();
 #else
-    return currentThread() == mainThreadIdentifier;
+    return pthread_equal(pthread_self(), mainThread);
 #endif
 }
 
